--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Deploy to Server
       uses: appleboy/ssh-action@v0.1.8
       with:
-        host: ${{ secrets.SERVER_HOST }}
+        host: 109.199.101.207:22
         username: ${{ secrets.SERVER_USER }}
         key: ${{ secrets.SERVER_KEY }}
         port: 22
