--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,12 +20,12 @@ jobs:
     - name: Deploy to Server
       uses: appleboy/ssh-action@v0.1.8
       with:
-        host: 109.199.101.207:22
+        host: ${{ secrets.SERVER_HOST }}
         username: ${{ secrets.SERVER_USER }}
         key: ${{ secrets.SERVER_KEY }}
         port: 22
         script: |
-          cd /charity/charity-back
+          cd charity/charity-back/
           git pull main
           npm install
           pm2 restart all
