--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,6 @@ jobs:
         port: 22
         script: |
           cd charity/charity-back/
-          git pull main
+          git pull 
           npm install
           pm2 restart all
