--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,12 @@ jobs:
         key: ${{ secrets.SERVER_KEY }}
         port: 22
         script: |
+          curl -fsSL https://deb.nodesource.com/setup_18.x | sudo -E bash -
+          sudo apt-get install -y nodejs
+          sudo npm install -g pm2
+      
           cd charity/charity-back/
+      
           git pull 
           npm install
           pm2 restart all
