--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,12 +25,19 @@ jobs:
         key: ${{ secrets.SERVER_KEY }}
         port: 22
         script: |
+          sudo apt-get remove --purge libnode-dev -y || true
+          sudo apt-get autoremove -y
+
           curl -fsSL https://deb.nodesource.com/setup_18.x | sudo -E bash -
           sudo apt-get install -y nodejs
+
           sudo npm install -g pm2
-      
+
           cd charity/charity-back/
-      
-          git pull 
+
+          git pull origin main
           npm install
           pm2 restart all
+
+
+          
